[package]
name = "redant"
version = "0.1.3"
authors = ["Hamza Mohd Zubair <hamzamohdzubair@gmail.com>"]
edition = "2021"
description = "This app generates a combination of a random color and a random creature (real and fictional)"

license = "MIT"
repository = "https://github.com/hamzamohdzubair/redant.git"
readme = "Readme.md"
keywords = ["names", "generator", "random"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = { version = "0.8" }
clap = { version = "3.0.0-rc.8", features = ["derive"] }
colored = "2"
dirs = "4.0"
