[package]
name = "redant"
version = "0.1.11"
authors = ["Hamza Mohd Zubair <hamzamohdzubair@gmail.com>"]
edition = "2024"
description = "This app generates a combination of a random color and a random creature (real and fictional)"

license = "MIT"
repository = "https://github.com/hamzamohdzubair/redant.git"
documentation = "https://hamzamohdzubair.github.io/redant/"
readme = "Readme.md"
keywords = ["names", "generator", "random"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5.0"
# clap = { version = "3.2.25", features = ["cargo", "regex", "env"] }
regex = "1.11.2"
rand = "0.9.2"
dirs = "6.0.0"
colored = "3.0.0"
clap = { version = "4.5.47", features = ["cargo"] }
